init.d/03.setup-resources/manifests/addons-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addons-deployment
spec:
  selector:
    matchLabels:
      app: addons
  replicas: 1
  template:
    metadata:
      labels:
        app: addons
    spec:
      containers:
      - name: python
        image: python:3-alpine
        command: ["python3", "/scripts/main.py"]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: addons-volume
          mountPath: /scripts
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
        - name: addons-volume
          configMap:
            name: addons-registry
