init.d/03.setup-resources/manifests/cat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-deployment
spec:
  selector:
    matchLabels:
      app: cat
  replicas: 0
  template:
    metadata:
      labels:
        app: cat
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: pages-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
        - name: pages-volume
          configMap:
            name: cat-pages
