init.d/03.setup-resources/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
<<<<<<<< HEAD:init.d/04.setup-resources/manifests/frontend-deployment.yaml
      - name: escape-room-frontend
        image: escape-room-frontend
        imagePullPolicy: Never
========
      - name: nginx
        image: nginx:1.29.0
>>>>>>>> main:init.d/03.setup-resources/manifests/frontend-deployment.yaml
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
