init.d/03.setup-resources/manifests/tome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tome-deployment
spec:
  selector:
    matchLabels:
      app: tome
  replicas: 1
  template:
    metadata:
      labels:
        app: tome
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: tome-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
        - name: tome-volume
          configMap:
            name: open-tome
