init.d/03.setup-resources/manifests/cat-counter-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cat-counter-service
spec:
  selector:
    app: cat-counter
  ports:
  - port: 80
