init.d/03.setup-resources/manifests/photoframe-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: photoframe-service
spec:
  selector:
    app: photoframe
  ports:
  - port: 80
