init.d/03.setup-resources/manifests/tome-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tome-service
spec:
  selector:
    app: tome
  ports:
  - port: 80
