init.d/03.setup-resources/manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /addons(/|$)(.*)
        backend:
          service:
            name: addons-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /cat(/|$)(.*)
        backend:
          service:
            name: cat-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /cat-counter(/|$)(.*)
        backend:
          service:
            name: cat-counter-service
            port:
              number: 80
      - pathType: Prefix
        path: /orb
        backend:
          service:
            name: orb-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /photoframe(/|$)(.*)
        backend:
          service:
            name: photoframe-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /tome(/|$)(.*)
        backend:
          service:
            name: tome-service
            port:
              number: 80
      - pathType: ImplementationSpecific
        path: /()(.*)
        backend:
          service:
            name: frontend-service
            port:
              number: 80
